5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1637_1053.log
== TEST (2019-04-09 10:30:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = inpit("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    patrono = inpit("Digite um patrono: ")
NameError: name 'inpit' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:30:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:30:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:32:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem.lower())
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:32:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem.lower())
-- EXECUTION TIME:
0.181356
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:32:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem.lower())
-- EXECUTION TIME:
0.197577
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:32:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:33:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.177028
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:33:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.125789
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:33:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.185476
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:33:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.167205
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:34:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.114311
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:34:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono == "cervo"):
	mensagem = patrono + " eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.125821
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:34:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.202657
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:34:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:34:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:34:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono de Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono de  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.160344
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de  Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:35:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono do Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono do  Harry Potter"
	
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:35:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite um patrono: ")

if( patrono.lower() == "cervo"):
	mensagem = patrono.lower() + " eh patrono do Harry Potter"
else:
	mensagem = patrono.lower() + " nao eh patrono do  Harry Potter"
	
print(mensagem)
-- EXECUTION TIME:
0.138671
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do  Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
